use basic_dsp with interpolation function operating but not working

--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -11,12 +11,13 @@ ndarray = { version = "0.13.1", features = ["blas"] }
 ndarray-linalg = { version = "0.12"}
 ndarray-stats = { version = "0.3"}
 num-integer = "0.1"
-blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
-openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
-fftw-src = { version = "0.3.0"} # had to set CC=/usr/bin/gcc followed by 'cargo clean' to compile correctly (anaconda conflict)
-fftw = { version = "0.6.0"}
+# blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
+# openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
+# fftw-src = { version = "0.3.0"} # had to set CC=/usr/bin/gcc followed by 'cargo clean' to compile correctly (anaconda conflict)
+# fftw = { version = "0.6.0"}
 image = { version = "0.23.4"}
 hdf5 = { version = "0.6.1"}  # requires debian package libhdf5-dev
+basic_dsp = "*"
 
 
 [profile.release]
