Fix bug in nested for loop order and array size

--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pa-tom"
+name = "us-beamform-linarray"
 version = "0.1.0"
 authors = ["Clay Sheaff <claysheaff@protonmail.com>"]
 edition = "2018"
