--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -21,6 +21,7 @@ basic_dsp = "*"
 log = "0.4"
 simplelog = "^0.7.6"
 opencv = {version = "0.46", default-features = false, features = ["opencv-4", "buildtime-bindgen", "contrib"]}
+plotlib = '*'
 
 [profile.release]
 debug = true
